# structlog-sentry-logger

./: .cruft.json  .envrc.sample  .gitattributes  .gitignore  .gitlab-ci.yml  .mutmut-cache  .pre-commit-config.yaml  .python-version  .readthedocs.yml  CONTRIBUTING_GUIDE.rst  Makefile  README.md  build.py  codecov.yml  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/: CODE_OF_CONDUCT.rst  CONTRIBUTING_GUIDE.rst  auto-merge.yml  dependabot.yml  labels.yml  release-drafter.yml
.github/workflows/: auto-merge-dependabot.yml  ci.yml  codeql.yml  constraints.txt  dependabot_pr.yml  dependabot_trunk_push.yml  docs.yml  labeler.yml  main.yml  publish_benchmarks.yml  release.yml
dev/Darwin/py37-benchmark-c_library/: data.js
dev/Darwin/py37-benchmark-pure_python/: data.js
dev/Darwin/py38-benchmark-c_library/: data.js
dev/Darwin/py38-benchmark-pure_python/: data.js
dev/Darwin/py39-benchmark-c_library/: data.js
dev/Darwin/py39-benchmark-pure_python/: data.js
dev/Linux/py37-benchmark-c_library/: data.js
dev/Linux/py37-benchmark-pure_python/: data.js
dev/Linux/py38-benchmark-c_library/: data.js
dev/Linux/py38-benchmark-pure_python/: data.js
dev/Linux/py39-benchmark-c_library/: data.js
dev/Linux/py39-benchmark-pure_python/: data.js
dev/Win32/py37-benchmark-c_library/: data.js
dev/Win32/py37-benchmark-pure_python/: data.js
dev/Win32/py38-benchmark-c_library/: data.js
dev/Win32/py38-benchmark-pure_python/: data.js
dev/Win32/py39-benchmark-c_library/: data.js
dev/Win32/py39-benchmark-pure_python/: data.js
dev/aggregate/: data.js
dev/bench/Darwin/CPython/3.10/64bit/c_library/: data.js
dev/bench/Darwin/CPython/3.10/64bit/pure_python/: data.js
dev/bench/Darwin/CPython/3.11/64bit/c_library/: data.js
dev/bench/Darwin/CPython/3.11/64bit/pure_python/: data.js
dev/bench/Darwin/CPython/3.12/64bit/c_library/: data.js
dev/bench/Darwin/CPython/3.12/64bit/pure_python/: data.js
dev/bench/Darwin/CPython/3.13/64bit/c_library/: data.js
dev/bench/Darwin/CPython/3.13/64bit/pure_python/: data.js
dev/bench/Darwin/CPython/3.7/64bit/c_library/: data.js
dev/bench/Darwin/CPython/3.7/64bit/pure_python/: data.js
dev/bench/Darwin/CPython/3.8/64bit/c_library/: data.js
dev/bench/Darwin/CPython/3.8/64bit/pure_python/: data.js
dev/bench/Darwin/CPython/3.9/64bit/c_library/: data.js
dev/bench/Darwin/CPython/3.9/64bit/pure_python/: data.js
dev/bench/Darwin/Cpython3.7/c_library/: data.js
dev/bench/Darwin/Cpython3.7/pure_python/: data.js
dev/bench/Darwin/Cpython3.8/c_library/: data.js
dev/bench/Darwin/Cpython3.8/pure_python/: data.js
dev/bench/Darwin/Cpython3.9/c_library/: data.js
dev/bench/Darwin/Cpython3.9/pure_python/: data.js
dev/bench/Linux/CPython/3.10/64bit/c_library/: data.js
dev/bench/Linux/CPython/3.10/64bit/pure_python/: data.js
dev/bench/Linux/CPython/3.11/64bit/c_library/: data.js
dev/bench/Linux/CPython/3.11/64bit/pure_python/: data.js
dev/bench/Linux/CPython/3.12/64bit/c_library/: data.js
dev/bench/Linux/CPython/3.12/64bit/pure_python/: data.js
dev/bench/Linux/CPython/3.13/64bit/c_library/: data.js
dev/bench/Linux/Cpython3.7/c_library/: data.js
dev/bench/Linux/Cpython3.7/pure_python/: data.js
dev/bench/Linux/Cpython3.8/c_library/: data.js
dev/bench/Linux/Cpython3.8/pure_python/: data.js
dev/bench/Linux/Cpython3.9/c_library/: data.js
dev/bench/Linux/Cpython3.9/pure_python/: data.js
dev/bench/Win32/Cpython3.10/c_library/: data.js
dev/bench/Win32/Cpython3.10/pure_python/: data.js
dev/bench/Win32/Cpython3.7/c_library/: data.js
dev/bench/Win32/Cpython3.7/pure_python/: data.js
dev/bench/Win32/Cpython3.8/c_library/: data.js
dev/bench/Win32/Cpython3.8/pure_python/: data.js
dev/bench/Win32/Cpython3.9/c_library/: data.js
dev/bench/Win32/Cpython3.9/pure_python/: data.js
dev/bench/macos-latest/CPython3.7/c_library/: data.js
dev/bench/macos-latest/CPython3.7/pure_python/: data.js
dev/bench/macos-latest/CPython3.8/c_library/: data.js
dev/bench/macos-latest/CPython3.8/pure_python/: data.js
dev/bench/macos-latest/CPython3.9/c_library/: data.js
dev/bench/macos-latest/CPython3.9/pure_python/: data.js
dev/bench/ubuntu-latest/CPython3.7/c_library/: data.js
dev/bench/ubuntu-latest/CPython3.7/pure_python/: data.js
dev/bench/ubuntu-latest/CPython3.8/c_library/: data.js
dev/bench/ubuntu-latest/CPython3.8/pure_python/: data.js
dev/bench/ubuntu-latest/CPython3.9/c_library/: data.js
dev/bench/ubuntu-latest/CPython3.9/pure_python/: data.js
dev/bench/windows-latest/CPython3.7/c_library/: data.js
dev/bench/windows-latest/CPython3.7/pure_python/: data.js
dev/bench/windows-latest/CPython3.8/c_library/: data.js
dev/bench/windows-latest/CPython3.8/pure_python/: data.js
dev/bench/windows-latest/CPython3.9/c_library/: data.js
dev/bench/windows-latest/CPython3.9/pure_python/: data.js
dev/py37-benchmark-c_library/: data.js
dev/py37-benchmark-pure_python/: data.js
dev/py38-benchmark-c_library/: data.js
dev/py38-benchmark-pure_python/: data.js
dev/py39-benchmark-c_library/: data.js
dev/py39-benchmark-pure_python/: data.js
docs/: Makefile  requirements.txt
docs/source/: changelog.rst  conf.py  contributing.rst  docutils.conf  global.rst  index.md  recommendedbestpractices.rst  usage.rst
docs/source/_templates/: index.rst
docs/source/_templates/python/: module.rst
docs/source/ref/api/: modules.rst
docs/source/ref/dev/: _DEVELOPER_ONLY_MODULE.rst  _config.rst  modules.rst
docs_src/: pure_structlog_logging_without_sentry.py  pyproject.toml  sentry_integration.py
structlog_sentry_logger/: __init__.py  _config.py  _feature_flags.py  logger.py  structlog_sentry.py
tests/: conftest.py  pyproject.toml  test_benchmarks.py  utils.py
tests/benchmarks/: test_benchmarks.py  test_structlog_benchmarks.py  utils.py
tests/docs_src/: test_pure_structlog_logging_without_sentry.py  test_sentry_integration.py  utils.py  validate_output.py
tests/structlog_sentry_logger/: child_module_1.py  child_module_2.py  test__config.py  test_logger.py  test_startup.py
(+13 files in other folders)
